[gd_scene load_steps=6 format=3 uid="uid://clvl8i5bcr6vq"]

[ext_resource type="Script" path="res://Player/Settings.gd" id="1_2mbfg"]
[ext_resource type="FontFile" uid="uid://c1m2dbux6b86c" path="res://Assets/Fonts/Scrambled_Eggs_Short_Lowercase.ttf" id="2_0p0al"]

[sub_resource type="LabelSettings" id="LabelSettings_7mdp5"]
font = ExtResource("2_0p0al")

[sub_resource type="LabelSettings" id="LabelSettings_jd5oq"]
font = ExtResource("2_0p0al")

[sub_resource type="LabelSettings" id="LabelSettings_08fd5"]
font = ExtResource("2_0p0al")

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_2mbfg")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
offset_left = 20.0
offset_top = 19.0
offset_right = 364.0
offset_bottom = 197.0
follow_focus = true

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="CheckButton" type="CheckButton" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../MasterVolume3/SoundSlider")
focus_neighbor_bottom = NodePath("../MasterVolume/MasterSlider")
text = "Fullscreen"

[node name="MasterVolume" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/MasterVolume"]
layout_mode = 2
text = "Master"
label_settings = SubResource("LabelSettings_7mdp5")
horizontal_alignment = 1

[node name="MasterSlider" type="HSlider" parent="ScrollContainer/MarginContainer/VBoxContainer/MasterVolume"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../../CheckButton")
focus_neighbor_bottom = NodePath("../../MasterVolume2/MusicSlider")
max_value = 1.0
step = 0.05
value = 1.0
tick_count = 10

[node name="Control" type="Control" parent="ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="MasterVolume2" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/MasterVolume2"]
layout_mode = 2
text = "Music"
label_settings = SubResource("LabelSettings_jd5oq")
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="ScrollContainer/MarginContainer/VBoxContainer/MasterVolume2"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../../MasterVolume/MasterSlider")
focus_neighbor_bottom = NodePath("../../MasterVolume3/SoundSlider")
max_value = 1.0
step = 0.05
value = 1.0
tick_count = 10

[node name="Control2" type="Control" parent="ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="MasterVolume3" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/MasterVolume3"]
layout_mode = 2
text = "Sound"
label_settings = SubResource("LabelSettings_08fd5")
horizontal_alignment = 1

[node name="SoundSlider" type="HSlider" parent="ScrollContainer/MarginContainer/VBoxContainer/MasterVolume3"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../../MasterVolume2/MusicSlider")
focus_neighbor_bottom = NodePath("../../CheckButton")
max_value = 1.0
step = 0.05
value = 1.0
tick_count = 10

[node name="Control3" type="Control" parent="ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Button" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Test"

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="toggled" from="ScrollContainer/MarginContainer/VBoxContainer/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
